--- a/front/index.html
+++ b/front/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
